KPropertiesDialog: Don't quote the path unnecessarily

We don't need to KShell::quoteArg the executable path, since we use
KShell::joinArgs later which takes care of proper quoting.

cc @davidedmundson 

BUG: 467369